# protobuf-typeddict

./: README.md  pyproject.toml
src/pb2td/: __init__.py
src/protobuf_typeddict/: __init__.py
