[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "protobuf-typeddict"
authors = [{ name = "jkmnt" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = ["click >= 8.0.0"]

[project.urls]
Documentation = "https://jkmnt.github.com/protobuf-typeddict"
Source = "https://github.com/jkmnt/protobuf-typeddict"


[project.scripts]
pb2td = "protobuf_typeddict:cli"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "C4", "LOG", "INT"]
ignore = ["E501", "B028"]
